--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/count.js"></script>
   </head>
   <body style="text-align: center">
   
@@ -73,41 +74,6 @@
 </div>
 
 <button onclick="reset()" class="button block-button button-dark"> RESET</button>
-
-<script type="text/javascript">
-
-
-function IncDecRed(plusminus) {
-
-plusminus = parseInt (plusminus);
-
-currentScore  = parseInt(document.getElementById("scorered").innerHTML) + plusminus;
-
-document.getElementById("scorered").innerHTML = currentScore;
-
-  }
-  
- function IncDecBlue(plusminus) {
-
-plusminus = parseInt (plusminus);
-
-currentScore  = parseInt(document.getElementById("scoreblue").innerHTML) + plusminus;
-
-document.getElementById("scoreblue").innerHTML = currentScore;
-
-  } 
- 
- function reset () {
-
-document.getElementById("scorered").innerHTML = 0;
-document.getElementById("scoreblue").innerHTML = 0; 	
- 	
- }
-  
-  
-
-</script>
-			
     
   </body>
 </html>
